# daie

./: .gitignore  .pylintrc  README.md  check_init_script.py  constants.py  dev-requirements.txt  dev-unity-requirements.txt  functions.py  pyproject.toml  requirements.txt  setup.py  spark_session.py  test-requirements.txt
.github/workflows/: cd.yml  ci.yml  pipelines.yml
adf-daie-chn-dev/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json
adf-daie-chn-dev/linkedTemplates/: ArmTemplateParameters_master.json  ArmTemplate_0.json  ArmTemplate_master.json
book/: README.md  ch01.ipynb
book/ch01/: ch01.ipynb
book/ch02/: ch02.ipynb
config/: local_dev_conf_azure_storage.json.txt  local_dev_conf_databricks_instances.json.txt  template_databricks_connect.json
daie/: __init__.py  definitions.py  main.py
daie/jobs/: 01_bronze_ingestion.py  02_silver_cleaning.py  03_gold_aggregation.py  dbx_config.py
daie/jobs/ddl/: grant_access_to_catalog.py
daie/jobs/elt/: raw_file_load.py  raw_table_load.py
daie/jobs/ml/: config.py  data.py  eval.py  feature.py  model.py  train.py  utils.py
daie/utils/: args_helper.py  spark_utils.py
daie/utils/config/: __init__.py
daie/utils/constants/: metadata.py
daie/utils/elt/: __init__.py  common.py
daie/utils/tests/: common.py
data/gold/accident/: .part-00000-703f291a-7455-432c-a84b-89bee74fd5ff-c000.snappy.parquet.crc  .part-00001-13be1b70-509d-4857-91e4-fc65a406ec64-c000.snappy.parquet.crc  part-00000-703f291a-7455-432c-a84b-89bee74fd5ff-c000.snappy.parquet  part-00001-13be1b70-509d-4857-91e4-fc65a406ec64-c000.snappy.parquet
data/gold/usagers/: .part-00000-62815f6e-a17d-4926-a01e-1f16a8baeb48-c000.snappy.parquet.crc  .part-00001-1222b57b-c591-455c-ad56-f8eebd58a477-c000.snappy.parquet.crc  .part-00002-c85b50f9-1dfd-4d5f-adf7-f81094bee2dc-c000.snappy.parquet.crc  .part-00003-a4407626-962f-4f7c-aa06-694c22f69271-c000.snappy.parquet.crc  part-00000-62815f6e-a17d-4926-a01e-1f16a8baeb48-c000.snappy.parquet  part-00001-1222b57b-c591-455c-ad56-f8eebd58a477-c000.snappy.parquet  part-00002-c85b50f9-1dfd-4d5f-adf7-f81094bee2dc-c000.snappy.parquet  part-00003-a4407626-962f-4f7c-aa06-694c22f69271-c000.snappy.parquet
data/gold/vehicules/: .part-00000-fc007e9b-8f8d-41c5-bead-a4272f226d01-c000.snappy.parquet.crc  .part-00001-eaedc77b-df67-4b92-8b6e-ad5f68b70a06-c000.snappy.parquet.crc  part-00000-fc007e9b-8f8d-41c5-bead-a4272f226d01-c000.snappy.parquet  part-00001-eaedc77b-df67-4b92-8b6e-ad5f68b70a06-c000.snappy.parquet
data/silver/accidents_features/: .part-00000-55059748-8d1b-4280-afec-8e38dd187bff-c000.snappy.parquet.crc  part-00000-55059748-8d1b-4280-afec-8e38dd187bff-c000.snappy.parquet
data/silver/caract/: .part-00000-d6c1fbb0-04a1-42d9-8f4d-c18a6c0f7888-c000.snappy.parquet.crc  .part-00001-0ae24662-e65f-4f1e-8256-2468efe66450-c000.snappy.parquet.crc  part-00000-d6c1fbb0-04a1-42d9-8f4d-c18a6c0f7888-c000.snappy.parquet  part-00001-0ae24662-e65f-4f1e-8256-2468efe66450-c000.snappy.parquet
data/silver/lieux/: .part-00000-5d59f347-7911-4b91-b846-8d13b0d2b014-c000.snappy.parquet.crc  .part-00001-e091f8a9-35b2-4500-b8e3-607ef2daf9c1-c000.snappy.parquet.crc  (+2 more)
dataset/: DS_Source_OpenData.json  DS_Transient_OpenData_Dynamic.json  ds_github_csv.json
deployment/devops/: README.md  README.txt  README_JOBS_OWNERSHIP.md  README_SP_PERMISSIONS.md  configure_allowlist_manual.sh  configure_init_script_allowlist.py  deploy_artifacts.py  grant_sp_permissions.py  grant_sp_usage.py  install_package_on_clusters.py  manage_cluster.py  transfer_jobs_ownership.py
deployment/terraform/: README.md
deployment/terraform/dev/: backend.tf  (+9 more)
docs/: INIT_SCRIPT_ALLOWLIST.md  PYSPARK.md
factory/: adf-daie-chn-dev.json
linkedService/: HttpServer_ls_ds_github.json  LS_ADLS_DataLake.json  LS_Databricks_Workspace.json  ls_adls_transient.json  ls_adls_unity_catalog.json  ls_github_HttpServer.json  ls_github_raw.json  ls_key_vault.json  ls_storage_transient.json
mds/: __init__.py  definitions.py  main.py
mds/utils/: args_helper.py  config.py  config_utils.py  secret_manager.py  spark_utils.py  unity_catalog.py
mlruns/0/: meta.yaml
pipeline/: 01_medaillon_orchestration_v1.json  02_pl_copy_source_to_Transient.json  09_pl_load_dl_opendata_caract_v1.json  09_pl_load_dl_opendata_lieu_v1.json  09_pl_load_dl_opendata_usager_v1.json  09_pl_load_dl_opendata_vehicule_v1.json  10_pl_load_dm_opendata_accident.json  20_pl_machine_learning_v1.json  pipeline1.json
src/: main.py
src/ade/: definitions.py  main.py
src/mds/: main.py
src/utils/: config_utils.py  spark_utils.py  unity_catalog.py
tests/devops/: __init__.py  deploy_artifacts_test.py
tests/elt/: raw_file_load_test.py
tests/utils/: spark_utils_test.py  test_config_utils.py  test_spark_utils.py
(+69 files in other folders)
