[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mds"                          # Nom du package Python
version = "0.0.1"
description = "Package for running the data pipeline for Modern Data Stack with Azure and Databricks"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Godwin AMEGAH", email = "komlan.godwin.amegah@gmail.com"}]
dependencies = [
    "pyyaml",
    "pandas",
    "XlsxWriter",
    "requests",
    "unidecode",
    "jsonref",
    "mergedeep",
    "Jinja2"
]

[project.optional-dependencies]
dev = [
    "databricks-connect"  # Dépendance pour le développement
]

test = [
    "pytest",            # Dépendances pour les tests
    "pylint",
    "pyspark",
    "pytest-mock",
    "pytest-cov",
    "wheel",
    "mock"
]

[project.scripts]
mds = "mds.main:main"                   # Point d'entrée : commande "mds" lance mds.main.main()

[tool.setuptools.packages.find]
where = ["src"]
include = ["mds", "mds.*"]              # Recherche le package "mds" dans src

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.setuptools.package-data]
mds = ["py.typed"]