[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ade"                     
version = "0.0.1"
description = "Package for running the data pipeline for Modern Data Stack with Azure and Databricks"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Godwin AMEGAH", email = "komlan.godwin.amegah@gmail.com"}]
dependencies = [
    "pyyaml",
    "pandas",
    "XlsxWriter",
    "requests",
    "unidecode",
    "jsonref",
    "mergedeep",
    "Jinja2"
]

[project.optional-dependencies]
dev = [
    "databricks-connect"
]

test = [
    "pytest",
    "pylint",
    "pyspark",
    "pytest-mock",
    "pytest-cov",
    "wheel",
    "mock"
]

[project.scripts]
ade = "ade.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ade", "ade.*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.setuptools.package-data]
ade = ["py.typed"]