[project]
name = "daie"
version = "0.1.0"
description = ""
authors = [
    {name = "Godwin Amegah", email = "komlan.godwin.amegah@gmail.com"},
]

# Runtime dependencies - these get installed when deploying the package
# Add any libraries your code actually imports (sklearn, pandas, etc.)
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

requires-python = ">=3.11"

[dependency-groups]
# Unit testing - isolated with local PySpark (for CI/CD)
# Pin pyspark to 3.5.x to avoid compatibility issues with py4j and databricks-connect
test = [
    "pyspark>=3.5.5,<4.0.0",
    "pytest>=9.0.1",
    "pylint>=4.0.3",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "mock>=5.2.0",
]

# Local development - with Databricks Connect to run against a cluster
dev = [
    "databricks-connect==15.4.*",
    "databricks-feature-engineering>=0.13.0.1",
    "databricks-sdk>=0.73.0"
]

# Linting and code quality tools
lint = [
    "ruff>=0.4.6,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "codespell>=2.2.0,<3.0.0",
    "types-pyyaml>=6.0.12.20240917,<7.0.0",
    "types-requests>=2.32.0.20240914,<3.0.0",
]

# Build tools
build = [
    "twine>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0,<2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["daie"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]

exclude = [".venv"]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."

[tool.hatch.build.targets.wheel]
packages = ["daie"]